--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <div id="input-days" class="input-section">
-      <label style="color:#27ae60;">【婚/喪/病假專用】法規給予天數 (例如婚假8天)</label>
+      <label style="color:#27ae60;">【婚/喪/病假專用】法規給予天數 (例如婚假8天、喪假3（曾祖、手足）、6（祖、子女）、8天（父母）)</label>
       <input type="number" id="legalDays" value="8">
     </div>
 
